# python-project-template

./: .copier-answers.yml  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .setup_dev.sh  CITATION.bib  LICENSE  README.md  copier.yml  paper.bib  paper.md  pyproject.toml  pyproject.toml.jinja  python-versions.jinja  tox.ini
.github/: pull_request_template.md
.github/workflows/: add-issue-to-project.yml  ci.yml  pre-commit-ci.yml  python-package.yml.jinja  smoke-test.yml  testing-and-coverage.yml
docs/: Makefile  conf.py  index.rst  requirements.txt
docs/practices/: ci.rst  ci_benchmarking.rst  ci_precommit.rst  ci_testing.rst  code_coverage.rst  conda.rst  customizing_project.rst  environment_management.rst  git-lfs.rst  issue_pr_templating.rst  linting.rst  namepace_project.rst  namespace_project.rst  overview.rst  pipx.rst  precommit.rst  publishing_package.rst  pypi.rst  pytest_timeout.rst  pytest_timing.rst  sphinx.rst  unit_testing.rst
docs/source/: citation.rst  configuration_checklist.rst  contact.rst  contributing.rst  existing_project.rst  new_project.rst  overview.rst  template_options.rst  update_project.rst
docs/static/: custom.css
python-project-template/: .gitignore  .gitignore.jinja  .initialize_new_project.sh  .pre-commit-config.yaml  .pre-commit-config.yaml.jinja  .prepare_project.sh  .readthedocs.yml  .setup_dev.sh  README.md.jinja  pyproject.toml.jinja  {% if include_docs %}.readthedocs.yml{% endif %}  {% if include_docs %}.readthedocs.yml{% endif %}.jinja  {% if project_license == 'BSD' %}LICENSE{% endif %}.jinja  {% if project_license == 'MIT' %}LICENSE.jinja{% endif%}  {% if project_license == 'MIT' %}LICENSE{% endif%}  {% if project_license == 'MIT' %}LICENSE{% endif%}.jinja  {% if use_gitlfs == 'disabled' %}.gitattributes{% endif %}.jinja  {% if use_gitlfs == 'enabled' %}.gitattributes{% endif %}.jinja
python-project-template/.github/: README.md  pull_request_template.md
python-project-template/docs/: Makefile  Makefile.jinja  conf.py.jinja  index.rst.jinja  requirements-test.txt.jinja  requirements.txt  requirements.txt.jinja  {% if include_notebooks %}notebooks.rst{% endif %}
python-project-template/nb/: {% if include_notebooks %}{example_notebook.ipynb{% endif %}
python-project-template/src/: {% if 'pylint' in enforce_style %}.pylintrc{% endif %}  {% if 'pylint' in enforce_style %}.pylintrc{% endif %}.jinja  {% if preferred_linter == 'pylint' %}.pylintrc{% endif %}
python-project-template/tests/: {% if 'pylint' in enforce_style %}.pylintrc{% endif %}  {% if 'pylint' in enforce_style %}.pylintrc{% endif %}.jinja  {% if 'ruff' in enforce_style %}.ruff.toml{% endif %}  {% if preferred_linter == 'pylint' %}.pylintrc{% endif %}
python-project-template/{% if include_benchmarks %}benchmarks{% endif %}/: README.md  asv.conf.json.jinja  benchmarks.py.jinja  format.py
python-project-template/{% if include_docs %}docs{% endif %}/: Makefile.jinja  conf.py.jinja  index.rst.jinja  requirements.txt.jinja  (+1 more)
tests/: .pylintrc  conftest.py  test_example.py  test_hydration.py  test_package_creation.py  test_questions.py
{{project_name}}/: pyproject.toml.jinja
(+54 files in other folders)
