[project]
name = "python-project-template"
license = {file = "LICENSE"}
readme = "README.md"
authors = [
    { name = "LINCC Frameworks", email = "lincc-frameworks-team@lists.lsst.org" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
]
dynamic = ["version"]

dependencies = [
    "setuptools_scm",
    "sphinx", # Used to automatically generate documentation
    "sphinx-rtd-theme", # Used to render documentation
]

[project.optional-dependencies]
dev = [
    "black", # Used to format code
    "pre-commit", # Used to run checks prior to committing code
    "pytest", # Used to run tests
    "pytest-copie", # Used to create hydrated copier projects for testing
    "tox", # Used to run tests in multiple environments
]

[build-system]
requires = [
    "setuptools>=62", # Used to build and package the Python project
    "setuptools_scm>=6.2", # Gets release version from git. Makes it available programmatically
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "_version.py"

[tool.black]
line-length = 110
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 110
